location loader and forgot password

--- a/views/addrestaurant.html
+++ b/views/addrestaurant.html
@@ -65,7 +65,11 @@
 					<p id="updatelocation-msg" style="color: red; font-size: 10px">
 						no location added
 					</p>
-					<div style="padding: 8px" id="mapholder"></div>
+					<p
+						id="locationloader"
+						style="color: rgba(25, 87, 255, 0.815); font-size: 12px"
+					></p>
+					<div style="padding: 8px; margin-bottom: 8px" id="mapholder"></div>
 					<button type="button" id="updatelocation-btn">
 						Update Location
 						<i class="fas fa-map-marker-alt"></i>
