--- a/views/forgotPassword.html
+++ b/views/forgotPassword.html
@@ -98,7 +98,7 @@
 				}
 				e.preventDefault();
 				messageContainer.innerHTML = "loading...";
-				fetch("http://localhost:3000/service/mail/sendotp", {
+				fetch("http://localhost:3000/service/passwordReset", {
 					method: "post",
 					headers: {
 						"Content-Type": "application/json",
@@ -110,9 +110,11 @@
 				})
 					.then((r) => r.json())
 					.then((r) => {
-						if (r.message.includes("code has been")) {
-							localStorage.setItem("email", input.value);
-							window.location.replace("./otpVerification.html");
+						if (r.message.includes("successfully mailed")) {
+							alert(
+								"Reset mail has been successfully mailed to the email if it exists."
+							);
+							window.location.replace("./login.html");
 						} else {
 							alert("Some error has occured " + r.message);
 						}
