--- a/views/login.html
+++ b/views/login.html
@@ -51,6 +51,17 @@
 										required
 									/>
 								</form>
+								<p
+									style="
+										color: blue;
+										font-size: 10px;
+										text-align: end;
+										margin: 2px;
+									"
+									onclick="window.location.href='forgotPassword.html'"
+								>
+									Forgot Password?
+								</p>
 							</td>
 						</tr>
 					</table>
